--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ django-csvimport
 easy_thumbnails
 pillow
 pylibmc
+django-admin-tools==0.5.1
+FeedParser
+
 #sudo apt-get install -y memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev
