--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,4 @@ git+git://github.com/ronnix/fabtools.git
 pygraphviz
 pyparsing==1.5.7
 pydot
-#sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev
+#sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz
