added registration users

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ FeedParser
 #django-admin-tools==0.5.1
 hg+https://bitbucket.org/izi/django-admin-tools
 git+git://github.com/ronnix/fabtools.git
+git+git://github.com/omab/django-social-auth.git
+hg+https://bitbucket.org/ubernostrum/django-registration
 pygraphviz
 pyparsing==1.5.7
 pydot
