--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ git+git://github.com/omab/django-social-auth.git
 pygraphviz
 pyparsing==1.5.7
 pydot
+django-tastypie
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz
