--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ pyparsing==1.5.7
 pydot
 git+git://github.com/toastdriven/django-tastypie.git
 BeautifulSoup4
+html5lib
 requests
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz
