--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pylibmc
 FeedParser
 hg+https://bitbucket.org/izi/django-admin-tools
 git+git://github.com/ronnix/fabtools.git
-git+git://github.com/omab/django-social-auth.git
+django-social-auth
 pygraphviz
 pyparsing==1.5.7
 pydot
