--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,6 @@ BeautifulSoup4
 html5lib
 djangorestframework
 requests
+factory_boy
+coverage
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz
