--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -14,12 +14,12 @@ server {
         autoindex on;
     }
 
-    location /static/upload/ {
-        proxy_pass http://127.0.0.1:8085;
+    location ~^/static/(js|img|3d|jade|css|tpl)/ {
+        root $videobase_root/interface;
     }
 
-    location ~^/static/$interface_pattern/ {
-        root $videobase_root/interface;
+    location /static/upload/ {
+        proxy_pass http://127.0.0.1:8085;
     }
 
     location ~^/(register|person|login|films|user)/api/(.*)(json)$ {
@@ -47,9 +47,10 @@ server {
     listen 8085;
     root $videobase_root;
     set $videobase_root /home/denis/pycharm-projects/videobase;
-    error_log /var/log/nginx/resize.error.log debug;
 
-    location ~ ^(.*)_(?<width>\d+)x(?<height>\d+).(?:jpg|gif|png)$ {
+    error_log /var/log/nginx/resize.error.log;
+
+    location ~^(.*)_(?<width>\d+)x(?<height>\d+).(?:jpg|gif|png)$ {
         rewrite ^(.*)_(?<width>\d+)x(?<height>\d+)\.(jpg|gif|png)$ $1.$4;
 
         if (!-f $request_filename) {
