--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,5 @@ coverage
 celery
 django-celery
 raven
+selenium
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz nginx python-virtualenv python-pygraphviz pkg-config postgresql
