-caching upload image and resize picture

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -1,3 +1,5 @@
+proxy_cache_path /home/denis/pycharm-projects/vb_cache levels=1:2 keys_zone=vb_images:50m inactive=24h max_size=5G;
+
 server {
     index index.html index.htm;
     listen vsevi.com;
@@ -16,10 +18,15 @@ server {
 
     location ~^/static/(js|img|3d|jade|css|tpl)/ {
         root $videobase_root/interface;
+        autoindex on;
     }
 
     location /static/upload/ {
         proxy_pass http://127.0.0.1:8085;
+        proxy_cache vb_images;
+        proxy_cache_valid 200     24h;
+        proxy_cache_valid 404 415 1m;
+        proxy_ignore_headers Expires Cache-Control;
     }
 
     location ~^/(register|person|login|films|user)/api/(.*)(json)$ {
@@ -50,8 +57,8 @@ server {
 
     error_log /var/log/nginx/resize.error.log;
 
-    location ~^(.*)_(?<width>\d+)x(?<height>\d+).(?:jpg|gif|png)$ {
-        rewrite ^(.*)_(?<width>\d+)x(?<height>\d+)\.(jpg|gif|png)$ $1.$4;
+    location ~^(.*)_(?<width>\d+)x(?<height>\d+).(?:jpg|jpeg|gif|png)$ {
+        rewrite ^(.*)_(?<width>\d+)x(?<height>\d+)\.(jpg|jpeg|gif|png)$ $1.$4;
 
         if (!-f $request_filename) {
             rewrite ^.*$ /notfound last;
