- filled nginx config  rewrites  on the extras

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -21,6 +21,18 @@ server {
         autoindex on;
     }
 
+    location ~^/extras/films/(.*)$ {
+        rewrite ^/extras/films/(.*)$ /static/upload/filmextras/$1;
+    }
+
+    location ~^/extras/persons/(.*)$ {
+        rewrite ^/extras/persons/(.*)$ /static/upload/persons/$1;
+    }
+
+    location ~^/extras/users/(.*)$ {
+        rewrite ^/extras/users/(.*)$ /static/upload/users/user_pic/$1;
+    }
+
     location /static/upload/ {
         proxy_pass http://127.0.0.1:8085;
         proxy_cache vb_images;
@@ -39,15 +51,25 @@ server {
 
     location / {
         proxy_pass http://vseviStream;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # health_check;
     }
+
+    # Надо собрать с ngx_http_healthcheck_module
+    # location /upstream_conf {
+    #     upstream_conf;
+    #     allow 127.0.0.1;
+    #     deny all;
+    # }
 }
 
 upstream vseviStream {
-    ip_hash; # Привязка к серверу
+    # Привязка к серверу
+    ip_hash;
+
+    # Round-robin
     server 127.0.0.1:9000 weight=1;
+
+    keepalive 16;
 }
 
 server {
