Delete hack for oauth. Add config to crossdomain.xml to nginx.

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -49,12 +49,25 @@ server {
         rewrite ^.+/(3d|js|img|css|jade|tpl)/(.*(js|css|png|jpg|gif|map|html))$ /static/$1/$2;
     }
 
+    location /tokenize {
+        proxy_cache    off;
+        expires        -1;
+        proxy_pass http://vseviStream;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location / {
         proxy_pass http://vseviStream;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   Host $host;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         # health_check;
+    }
+
+    location /crossdomain.xml {
+        root $videobase_root/interface;
     }
 
     # Надо собрать с ngx_http_healthcheck_module
