--- a/requirements.txt
+++ b/requirements.txt
@@ -35,5 +35,6 @@ jsonfield==0.9.20
 gdata
 zerorpc
 lxml
+pycurl
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz nginx python-virtualenv python-pygraphviz pkg-config postgresql npm nodejs git-flow libxslt-dev libxml2-dev
 #sudo npm install jade
