Add profile view for user

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -45,7 +45,7 @@ server {
         rewrite ^/(person|register|login|film|films|user)/api/(.*json)$ /api/v1/$2;
     }
 
-    location ~^/(feed|playlist|register|persons|login|user|film|films|search)/(.*)(png|js|gif|css|jpg|map|html)$ {
+    location ~^/(feed|profile|playlist|register|persons|login|user|film|films|search)/(.*)(png|js|gif|css|jpg|map|html)$ {
         rewrite ^.+/(3d|js|img|css|jade|tpl)/(.*(js|css|png|jpg|gif|map|html))$ /static/$1/$2;
     }
 
