обновлен пример конфига nginx

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -41,11 +41,11 @@ server {
         proxy_ignore_headers Expires Cache-Control;
     }
 
-    location ~^/(register|person|login|films|user)/api/(.*)(json)$ {
+    location ~^/(search|playlist|feed|register|person|persons|login|film|films|user|users)/api/(.*)(json)$ {
         rewrite ^/(person|register|login|film|films|user)/api/(.*json)$ /api/v1/$2;
     }
 
-    location ~^/(feed|playlist|register|persons|login|user|film|films|search)/(.*)(png|js|gif|css|jpg|map|html)$ {
+    location ~^/(search|playlist|feed|register|person|persons|login|user|users|film|films)/(.*)(png|js|gif|css|jpg|map|html)$ {
         rewrite ^.+/(3d|js|img|css|jade|tpl)/(.*(js|css|png|jpg|gif|map|html))$ /static/$1/$2;
     }
 
@@ -57,6 +57,8 @@ server {
         proxy_set_header   Host $host;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /static/player.html { root $videobase_root/interface;  }
 
     location / {
         proxy_pass http://vseviStream;
