--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -2,9 +2,9 @@ proxy_cache_path /home/denis/pycharm-projects/vb_image_cache levels=1:2 keys_zon
 
 server {
     index index.html index.htm;
-    listen vsevi.com;
+    listen vsevi.ru;
 
-    server_name vsevi.com;
+    server_name vsevi.ru;
     set $videobase_root /home/denis/pycharm-projects/videobase;
     set $interface_pattern (js|img|3d|jade|css|tpl);
 
@@ -42,7 +42,7 @@ server {
     }
 
     location ~^/(search|playlist|feed|register|person|persons|login|film|films|user|users)/api/(.*)(json)$ {
-        rewrite ^/(person|register|login|film|films|user)/api/(.*json)$ /api/v1/$2;
+        rewrite ^/(search|playlist|feed|register|person|persons|login|film|films|user|users)/api/(.*json)$ /api/v1/$2;
     }
 
 
