- измененый конфиг для nginx

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /home/denis/pycharm-projects/vb_image_cache levels=1:2 keys_zone=vb_images:50m inactive=24h max_size=5G;
+proxy_cache_path /home/denis/pycharm-projects/vb_image_cache levels=1:2 keys_zone=vb_images:50m inactive=60m max_size=5G;
 
 server {
     index index.html index.htm;
@@ -13,12 +13,20 @@ server {
 
     location /production/static/ {
         alias /var/www/;
+
         autoindex on;
+        expires 1d;
     }
 
     location ~^/static/(js|img|3d|jade|css|tpl)/ {
         root $videobase_root/interface;
+
+        expires 1d;
         autoindex on;
+    }
+
+    location /static/player.html {
+         root $videobase_root/interface;
     }
 
     location ~^/extras/films/(.*)$ {
@@ -35,47 +43,30 @@ server {
 
     location /static/upload/ {
         proxy_pass http://127.0.0.1:8085;
+
         proxy_cache vb_images;
         proxy_cache_valid 200     24h;
         proxy_cache_valid 404 415 1m;
+
         proxy_ignore_headers Expires Cache-Control;
-    }
-
-    location ~^/(register|person|login|films|user)/api/(.*)(json)$ {
-        rewrite ^/(person|register|login|film|films|user)/api/(.*json)$ /api/v1/$2;
-    }
-
-    location ~^/(feed|profile|playlist|register|persons|login|user|film|films|search)/(.*)(png|js|gif|css|jpg|map|html)$ {
-        rewrite ^.+/(3d|js|img|css|jade|tpl)/(.*(js|css|png|jpg|gif|map|html))$ /static/$1/$2;
     }
 
     location /tokenize {
         proxy_cache    off;
         expires        -1;
+
         proxy_pass http://vseviStream;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        include /etc/nginx/proxy_params;
     }
 
     location / {
         proxy_pass http://vseviStream;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        # health_check;
+        include /etc/nginx/proxy_params;
     }
 
     location /crossdomain.xml {
         root $videobase_root/interface;
     }
-
-    # Надо собрать с ngx_http_healthcheck_module
-    # location /upstream_conf {
-    #     upstream_conf;
-    #     allow 127.0.0.1;
-    #     deny all;
-    # }
 }
 
 upstream vseviStream {
