--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -1,5 +1,16 @@
 proxy_cache_path /home/denis/pycharm-projects/vb_image_cache levels=1:2 keys_zone=vb_images:50m inactive=60m max_size=5G;
 
+server{
+    listen vsevi.com;
+    rewrite ^ http://vsevi.ru$request_uri? permanent;
+}
+
+server {
+    listen kinopoisk2.ru;
+    server_name kinopoisk2.ru;
+    rewrite ^/film/([0-9]+)/$ http://vsevi.ru/kinopoisk/$1/;
+}
+
 server {
     index index.html index.htm;
     listen vsevi.ru;
