--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ gdata
 zerorpc
 lxml
 pycurl
+django-treebeard
 
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz nginx python-virtualenv python-pygraphviz pkg-config postgresql nodejs git-flow libxslt-dev libxml2-dev libcurl4-openssl-dev curl tor
 #sudo npm install jade zerorpc
