- fixed header in the config nginx - fixed url

--- a/configs/nginx_local.conf
+++ b/configs/nginx_local.conf
@@ -74,6 +74,10 @@ server {
     location / {
         proxy_pass http://vseviStream;
         include /etc/nginx/proxy_params;
+
+        proxy_hide_header Content-Type;
+        add_header Content-Type "text/html; charset=UTF-8";
+
     }
 
     location /crossdomain.xml {
