- added full text search field - changed query in the search api - added migration

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ zerorpc
 lxml
 pycurl
 django-treebeard
+djorm-ext-pgfulltext
 
 #sudo apt-get install -y mercurial memcached libmemcached-dev zlib1g-dev libssl-dev python-dev build-essential libjpeg-dev libfreetype6-dev zlib1g-dev libpng12-dev libpq-dev libgraphviz-dev graphviz nginx python-virtualenv python-pygraphviz pkg-config postgresql nodejs git-flow libxslt-dev libxml2-dev libcurl4-openssl-dev curl tor
 #sudo npm install jade zerorpc
